<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidLearn</string>
    <string name="action_settings">Settings</string>
    <string name="label_Intro">Raiden ingame</string>
    <string name="button_Boss1">Boss 1</string>
    <string name="button_boss2">Boss 2</string>
    <string name="title_activity_boss1">Boss1</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_questionAmount">7/7</string>
    <string name="label_question"></string>
    <string name="title_activity_nfr_start">nfr_start</string>
    <string name="button_pull">PULL!!</string>
    <string name="tv_logo">nfr</string>
    <string name="tv_pw">password</string>
    <string name="title_activity_points">Points</string>

</resources>
