<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_Intro"
        android:id="@+id/tv_intro"
        android:layout_marginTop="51dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Boss1"
        android:id="@+id/button_boss1"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/tv_intro"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_boss2"
        android:id="@+id/button_boss2"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/button_boss1"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
