<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="and.androidlearn.nfr_start">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_pull"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="89dp"
        android:text="@string/button_pull" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tv_logo"
        android:id="@+id/textView_logo"
        android:layout_marginTop="25dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView_username"
        android:layout_toEndOf="@+id/textView_username" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Username"
        android:id="@+id/textView_username"
        android:layout_toStartOf="@+id/button_pull"
        android:layout_marginBottom="59dp"
        android:layout_above="@+id/button_pull"
        android:layout_toLeftOf="@+id/button_pull"
        android:layout_marginRight="26dp"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_pw"
        android:id="@+id/textView_pw"
        android:layout_toStartOf="@+id/textView_logo"
        android:textSize="14sp"
        android:layout_above="@+id/button_pull"
        android:layout_alignRight="@+id/textView_username"
        android:layout_alignEnd="@+id/textView_username"
        android:nestedScrollingEnabled="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/editText_username"
        android:layout_alignTop="@+id/textView_username"
        android:layout_toRightOf="@+id/textView_username"
        android:layout_toEndOf="@+id/textView_username" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_pw"
        android:layout_below="@+id/editText_username"
        android:layout_alignLeft="@+id/editText_username"
        android:layout_alignStart="@+id/editText_username" />

</RelativeLayout>
